{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 110,
  "lineage": "a0770435-6f9f-cdec-a402-a3599dd57ef4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0694d931cee176e7d",
            "arn": "arn:aws:ec2:eu-west-1:317668459997:instance/i-008d0ab30fde74089",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008d0ab30fde74089",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "moncle",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04033549a7c5240a9",
            "private_dns": "ip-10-10-1-100.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.100",
            "public_dns": "ec2-3-249-142-34.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.142.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045ef5e38398a3469",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065eaaf950c0c0d7f",
            "tags": {
              "Name": "aws2"
            },
            "tags_all": {
              "Name": "aws2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f046f685968f85f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:317668459997:internet-gateway/igw-002953ef11f39be81",
            "id": "igw-002953ef11f39be81",
            "owner_id": "317668459997",
            "tags": {
              "Name": "igw-my-vpc"
            },
            "tags_all": {
              "Name": "igw-my-vpc"
            },
            "vpc_id": "vpc-0aebbaf753db850a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:317668459997:network-acl/acl-0add197a1ae5b6a7e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "172.10.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 102,
                "to_port": 65535
              }
            ],
            "id": "acl-0add197a1ae5b6a7e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "172.10.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 65535
              }
            ],
            "owner_id": "317668459997",
            "subnet_ids": [
              "subnet-065eaaf950c0c0d7f"
            ],
            "tags": {
              "Name": "nacl-my-vpc"
            },
            "tags_all": {
              "Name": "nacl-my-vpc"
            },
            "vpc_id": "vpc-0aebbaf753db850a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:317668459997:route-table/rtb-0daeb4505e573abc3",
            "id": "rtb-0daeb4505e573abc3",
            "owner_id": "317668459997",
            "propagating_vgws": [
              "vgw-0542df2d131add326"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002953ef11f39be81",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.10.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-0542df2d131add326",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.10.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-0542df2d131add326",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-my-vpc"
            },
            "tags_all": {
              "Name": "rt-my-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aebbaf753db850a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c19e1c81e76ea33d",
            "route_table_id": "rtb-0daeb4505e573abc3",
            "subnet_id": "subnet-065eaaf950c0c0d7f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:317668459997:security-group/sg-08f046f685968f85f",
            "description": "Allow SSH and ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f046f685968f85f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP - All",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "launch-wizard-2",
            "name_prefix": "",
            "owner_id": "317668459997",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aebbaf753db850a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:317668459997:subnet/subnet-065eaaf950c0c0d7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065eaaf950c0c0d7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "317668459997",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-subnet-01"
            },
            "tags_all": {
              "Name": "my-subnet-01"
            },
            "vpc_id": "vpc-0aebbaf753db850a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:317668459997:vpc/vpc-0aebbaf753db850a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03723a3f8c62813c4",
            "default_route_table_id": "rtb-084ae3e1b082a1d4d",
            "default_security_group_id": "sg-02cb3cebd21009783",
            "dhcp_options_id": "dopt-03cfe6a9f0a5706e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aebbaf753db850a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084ae3e1b082a1d4d",
            "owner_id": "317668459997",
            "tags": {
              "Name": "my-vpc-01"
            },
            "tags_all": {
              "Name": "my-vpc-01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/networkInterfaces/azure-vm-nic",
            "internal_domain_name_suffix": "z4zmhbybm1qenaig2ume2w2cne.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/publicIPAddresses/pip-azure-vm",
                "subnet_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/subnet-01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "azure-vm-nic",
            "private_ip_address": "172.10.1.4",
            "private_ip_addresses": [
              "172.10.1.4"
            ],
            "resource_group_name": "rg-azure-aws"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.vm_pip",
            "azurerm_resource_group.main",
            "azurerm_subnet.subnet_01",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/publicIPAddresses/pip-azure-vm",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.71.100.219",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-azure-vm",
            "resource_group_name": "rg-azure-aws",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpn_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/publicIPAddresses/pip-vpn-azure-aws",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.224.220.217",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-vpn-azure-aws",
            "resource_group_name": "rg-azure-aws",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/routeTables/routage-azure",
            "location": "westeurope",
            "name": "routage-azure",
            "resource_group_name": "rg-azure-aws",
            "route": [
              {
                "address_prefix": "10.10.0.0/16",
                "name": "route-to-aws-vpc",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VirtualNetworkGateway"
              }
            ],
            "subnets": [
              "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/subnet-01"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.10.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/default",
            "name": "default",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-azure-aws",
            "virtual_network_name": "vnet-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-azure-aws",
            "virtual_network_name": "vnet-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/subnet-01",
            "name": "subnet-01",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-azure-aws",
            "virtual_network_name": "vnet-azure"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/subnet-01",
            "route_table_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/routeTables/routage-azure",
            "subnet_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/subnet-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_route_table.main",
            "azurerm_subnet.subnet_01",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "87c3b2cf-6601-46e0-8106-e5184e5b826c",
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure",
            "location": "westeurope",
            "name": "vnet-azure",
            "resource_group_name": "rg-azure-aws",
            "subnet": [
              {
                "address_prefix": "172.10.0.0/24",
                "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/default",
                "name": "default"
              },
              {
                "address_prefix": "172.10.1.0/24",
                "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/subnet-01",
                "name": "subnet-01"
              },
              {
                "address_prefix": "172.10.2.0/24",
                "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "vpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "172.10.2.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "20.224.220.217"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworkGateways/vpn-azure-aws",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/publicIPAddresses/pip-vpn-azure-aws",
                "subnet_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworks/vnet-azure/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "westeurope",
            "name": "vpn-azure-aws",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-azure-aws",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.vpn_pip",
            "azurerm_resource_group.main",
            "azurerm_subnet.gateway",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "aws_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/connections/connection-azure-aws",
            "ipsec_policy": [
              {
                "dh_group": "DHGroup14",
                "ike_encryption": "AES256",
                "ike_integrity": "SHA256",
                "ipsec_encryption": "AES256",
                "ipsec_integrity": "SHA256",
                "pfs_group": "PFS14",
                "sa_datasize": 102400000,
                "sa_lifetime": 3600
              }
            ],
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/localNetworkGateways/lng-azure-aws",
            "location": "westeurope",
            "name": "connection-azure-aws",
            "private_link_fast_path_enabled": false,
            "resource_group_name": "rg-azure-aws",
            "routing_weight": 0,
            "shared_key": "Hajar123SecureKey",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/1d8bf86b-1e27-4c94-98d5-73a4b2607821/resourceGroups/rg-azure-aws/providers/Microsoft.Network/virtualNetworkGateways/vpn-azure-aws"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "authorization_key"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "shared_key"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.azure",
            "aws_vpc.main",
            "aws_vpn_connection.aws_to_azure",
            "aws_vpn_gateway.vgw",
            "azurerm_local_network_gateway.aws",
            "azurerm_public_ip.vpn_pip",
            "azurerm_resource_group.main",
            "azurerm_subnet.gateway",
            "azurerm_virtual_network.main",
            "azurerm_virtual_network_gateway.vpn_gateway"
          ]
        }
      ]
    }
  ]
}